some more clean up

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
       <meta name="keywords" content="tag">
         <meta name="news_keywords" content="tag">
     <meta name="description" content="InStyle is the leading site for celebrity style. See expert fashion advice, star hairstyles, beauty tips, how-to videos and real-time red carpet coverage.">
-      <link rel="canonical" href="https://www.instyle.com/tag/shopping-makeup-skin">
+      <link rel="canonical" href="">
       <meta property="og:title" content="Beauty">
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="InStyle">
-      <meta property="og:url" content="https://www.instyle.com/tag/shopping-makeup-skin">
+      <meta property="og:url" content="">
       <meta property="og:description" content="InStyle is the leading site for celebrity style. See expert fashion advice, star hairstyles, beauty tips, how-to videos and real-time red carpet coverage. ">
-      <meta name="pinterest:url" content="https://www.instyle.com/tag/shopping-makeup-skin">
+      <meta name="pinterest:url" content="">
       <meta name="twitter:card" content="summary_large_image">
-      <meta name="twitter:url" content="https://www.instyle.com/tag/shopping-makeup-skin">
+      <meta name="twitter:url" content="">
       <meta name="twitter:title" content="Beauty">
       <meta name="twitter:description" content="InStyle is the leading site for celebrity style. See expert fashion advice, star hairstyles, beauty tips, how-to videos and real-time red carpet coverage.">
       <meta name="pinterest:description" content="InStyle is the leading site for celebrity style. See expert fashion advice, star hairstyles, beauty tips, how-to videos and real-time red carpet coverage.">
@@ -890,7 +890,7 @@ s
                                     </a>
                                   </li>
                                   <li class="menu-item-main heading-menu submenu-multi-level">
-                                    <a class="submenu-link child-link" href="https://www.instyle.com/tag/shopping-makeup-skin" data-tracking-label="shopping > beauty">
+                                    <a class="submenu-link child-link" href="" data-tracking-label="shopping > beauty">
                                       Beauty
 
                                     </a>
@@ -2266,7 +2266,7 @@ s
 
                                         </li>
                                           <li class="menu-item-main  heading-menu">
-                                              <a class="submenu-link child-link" href="https://www.instyle.com/tag/shopping-makeup-skin" data-tracking-label="shopping > beauty">
+                                              <a class="submenu-link child-link" href="" data-tracking-label="shopping > beauty">
                                                 Beauty
 
                                               </a>
