adding plp products

--- a/index.html
+++ b/index.html
@@ -1,5 +1,40 @@
 <html lang="en" data-triggered="true"><head>
   <style>
+
+    /*css for card*/
+
+    .card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  max-width: 364px !important;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.button {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button1 {background-color: #b08f26;}
+
+/*css for card end here*/
+
+
     .dropbtn {
       background-color: #0066ff;
       color: white;
@@ -2460,6 +2495,19 @@ CCPA Preference Center
     </div>
   </div>
 </span>
+<span style="margin-right:20px;"> <div class="component autofill-content-container">
+    <div class="component content-loader" data-container-selector=".most-recent-bucket .content" data-content-selector=".most-recent-bucket .content > article" data-content-count="20" data-content-cacheid="3546852" data-page="1">
+      <div class="dropdown">
+        <button class="dropbtn" id ='Div3'>Reviewed By</button>
+        <div class="dropdown-content">
+          <a href="#" class="showClick ">Editor 1</a>
+          <a href="#" class="showClick ">Editor 2</a>
+          <a href="#" class="showClick ">Editor 3</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</span>
 <span class ="hidden" style="color:black; margin-top: 34px;" >We have collected all the products for you from <b>CONDENAST TRAVELLER</b></span>
 <span class ="show" style="color:black; margin-top: 34px;">We have collected all the Hotels for you from <b>CONDENAST TRAVELLER</b></span>
 <!-- <span style="margin-left: 70px;"><a href="https://swearby.com/ " id="bottle" >
@@ -2496,7 +2544,47 @@ CCPA Preference Center
          </div>>
       </main>
       </div>
-         <div class ="hidden" id= "iframe1">  <iframe src="https://www.cntraveler.com/category/hotel/paris"  width="100%" height="100%" title="W3Schools Free Online Web Tutorials"></iframe>
+         <div class ="hidden" id= "iframe1">  <iframe src="https://stag.cntraveler.com/category/hotel/miami"  width="100%" height="100%" title="W3Schools Free Online Web Tutorials"></iframe>
+          <h3 style="margin-left: 50px;">People Also Viewed This:</h3>
+          <div class="card" style="margin-left: 50px; margin-bottom: 50px; padding: 10px;">
+            <img src="./images/product1.png" alt="Avatar" style="width: 300px;height: 300px;">
+            <div class="container">
+              <h4><b>The Nue Co.</b></h4> 
+              <p>The Nue Co. Barrier Culture Cleanser by The Nue Co. at Free People, One, One Size</p> 
+            </div>
+            <button class="button button1" style="margin-left: 90px;"><a href="https://www.freepeople.com/shop/the-nue-co-barrier-culture-cleanser2/?cm_mmc=rakuten-_[…]4u&utm_medium=affiliates&utm_source=rakuten&utm_term=872834">Book Now</a></button>
+          </div>
+       <span>
+       <div class="card" style="margin-left: 50px; margin-bottom: 50px; padding: 10px;">
+            <img src="./images/product2.png" alt="Avatar" style="width: 300px;height: 300px;">
+            <div class="container">
+              <h4><b>Beach wear Tshirt</b></h4> 
+              <p>A colorfull tshirt for beach wear for men and women try it out with our brand     </p> 
+            </div>
+            <button class="button button1" style="margin-left: 90px;"><a href="https://www.expedia.com/Vienna-Hotels-Hotel-MOTTO.h12554.Hotel-Information?clickref=1100liLkB2ce&affcid=US.DIRECT.PHG.1100l20065.0&ref_id=1100liLkB2ce&my_ad=AFF.US.DIRECT.PHG.1100l20065.0&afflid=1100liLkB2ce">Book Now</a></button>
+          </div>
+       </span>
+       <span>
+        <div class="card" style="margin-left: 50px; margin-bottom: 50px; padding: 10px;">
+             <img src="./images/product3.png" alt="Avatar" style="width: 300px;height: 300px;">
+             <div class="container">
+               <h4><b>Beach Street Scampi</b></h4> 
+               <p>Sweet, tender shrimp and hearts are sautéed in a special blend of spicy marinara.</p> 
+             </div>
+             <button class="button button1" style="margin-left: 90px;"><a href="https://www.expedia.com/Vienna-Hotels-Hotel-MOTTO.h12554.Hotel-Information?clickref=1100liLkB2ce&affcid=US.DIRECT.PHG.1100l20065.0&ref_id=1100liLkB2ce&my_ad=AFF.US.DIRECT.PHG.1100l20065.0&afflid=1100liLkB2ce">Book Now</a></button>
+           </div>
+        </span>
+        <span>
+          <div class="card" style="margin-left: 50px; margin-bottom: 50px; padding: 10px;">
+               <img src="./images/product4.png" alt="Avatar" style="width: 300px;height: 300px;">
+               <div class="container">
+                 <h4><b>Hotel Motto</b></h4> 
+                 <p>Beach Street Shrimp Scampi with Linguine and beach sports to enjoy with family</p> 
+               </div>
+               <button class="button button1" style="margin-left: 90px;"><a href="https://www.expedia.com/Vienna-Hotels-Hotel-MOTTO.h12554.Hotel-Information?clickref=1100liLkB2ce&affcid=US.DIRECT.PHG.1100l20065.0&ref_id=1100liLkB2ce&my_ad=AFF.US.DIRECT.PHG.1100l20065.0&afflid=1100liLkB2ce">Book Now</a></button>
+             </div>
+          </span>
+       
         </div>
         <div class ="hidden2" id ="iframe2">  <iframe src="https://www.allure.com/product/listing/facial-cleansers"  width="100%" height="100%" title="W3Schools Free Online Web Tutorials"></iframe></div>
           <div class ="hidden3" id ="iframe3">  <iframe src="https://www.cntraveler.com/category/activity/chicago"  width="100%" height="100%" title="W3Schools Free Online Web Tutorials"></iframe></div>
@@ -2851,7 +2939,8 @@ Krux('scrape', { "user_attr_cookie_hid": {cookie: "hid"}});
   document.getElementById("Div1").style.border="none";
   document.getElementById("Div2").style.backgroundColor="black";
   document.getElementById("Div2").style.border="none";
-
+  document.getElementById("Div3").style.backgroundColor="b08f26";
+  document.getElementById("Div3").style.border="none";
   
   });
 
