adding div3 to other pages

--- a/index.html
+++ b/index.html
@@ -2956,6 +2956,8 @@ Krux('scrape', { "user_attr_cookie_hid": {cookie: "hid"}});
   document.getElementById("Div1").style.border="none";
   document.getElementById("Div2").style.backgroundColor="black";
   document.getElementById("Div2").style.border="none";
+  document.getElementById("Div3").style.backgroundColor="b08f26";
+  document.getElementById("Div3").style.border="none";
 
   
   });
@@ -2971,6 +2973,8 @@ Krux('scrape', { "user_attr_cookie_hid": {cookie: "hid"}});
   document.getElementById("Div1").style.border="none";
   document.getElementById("Div2").style.backgroundColor="black";
   document.getElementById("Div2").style.border="none";
+  document.getElementById("Div3").style.backgroundColor="b08f26";
+  document.getElementById("Div3").style.border="none";
 
   
   });
