--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     
     .dropdown:hover .dropbtn {background-color: #8c8c8c;}
     </style>
-    <title>Beauty | InStyle</title>
+    <title>Conde Nast Shop</title>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="icon" href="/img/favicons/favicon-32.png" sizes="32x32">
