--- a/index.html
+++ b/index.html
@@ -586,8 +586,8 @@ CCPA Preference Center
                   <div class="subcontainer">
                     <button class="menu" aria-label="Explore InStyle">
                       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" role="img" aria-hidden="true" tabindex="-1"><path d="M3 6h18v2.016H3V6zm0 6.984v-1.969h18v1.969H3zM3 18v-2.016h18V18H3z"></path></svg>
-                      <span class="menu-explore" aria-hidden="true"><img src="./images/condenastlogo.png" alt="Girl in a jacket" width="150" height="50"></span>
-                      <span class="menu-shop" aria-hidden="true" style="padding-top:16px"><b>VIRTUAL SHOP</b> </span>
+                      <span class="menu-explore" aria-hidden="true"><img src="./images/condenastlogo.png" alt="Girl in a jacket" width="220px" height="50"></span>
+                      <span class="menu-shop" aria-hidden="true" style="padding-top:16px"><b>ONE SHOP</b> </span>
                     </button>
                     <div class="primary-links desktop-only">
                       <ul class="primary-text-links">
@@ -2545,7 +2545,7 @@ CCPA Preference Center
       </main>
       </div>
          <div class ="hidden" id= "iframe1">  <iframe src="https://stag.cntraveler.com/category/hotel/miami"  width="100%" height="100%" title="W3Schools Free Online Web Tutorials"></iframe>
-          <h3 style="margin-left: 50px;">People Also Viewed This:</h3>
+          <h3 style="margin-left: 50px;">People Also Bought This:</h3>
           <div class="card" style="margin-left: 50px; margin-bottom: 50px; padding: 10px;">
             <img src="./images/product1.png" alt="Avatar" style="width: 300px;height: 300px;">
             <div class="container">
@@ -2597,7 +2597,7 @@ CCPA Preference Center
                     <div class="footer-logo">
                       <a class="full-logo" href="/" data-action="footer-logo">
                           <span class="svg-label" aria-label="CNT Homepage">CNT</span>
-                          <span style="color:white;font-size:30px;">CONDENAST VIRTUAL SHOP
+                          <span style="color:white;font-size:30px;">CONDENAST ONE SHOP
                             <!-- <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="140px" height="140px" viewBox="0 0 6632.1 1585.6">
                             <title>InStyle</title>
                             <path d="M6012.9,598.7c179.4,0,337.9,75.4,364.4,209.9h-727.2C5678.6,672.1,5831.5,598.7,6012.9,598.7 M2352.6,1403.4
